--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   </div>
 
   <p class="countdown" id="countdown"></p>
-
+<p>THIS IS NOT INVESTMENT ADVICE ONLY. IT IS AN AI MOMEMNTUM TRACKER PROTOTYPE.FOR EUDUCATIONAL PURPOSES ONLY</p>
   <script>
     const WEBHOOK = 'https://michaelfinance.app.n8n.cloud/webhook/dailymoversandlosers';
     const INTERVAL = 5 * 60 * 1000;
