Add educational disclaimer to index.html
Added disclaimer about the AI momentum tracker being for educational purposes only.

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
 
   <header>
     <h1>Momentum</h1>
+    <p>THIS IS NOT INVESTMENT ADVICE ONLY. IT IS AN AI MOMEMNTUM TRACKER PROTOTYPE.FOR EUDUCATIONAL PURPOSES ONLY</p>
     <div class="header-right">
       <span id="as-of"></span>
       <button id="refresh-btn">
