Wrap disclaimer text in a centered div

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
   </div>
 
   <p class="countdown" id="countdown"></p>
-<p>THIS IS NOT INVESTMENT ADVICE ONLY. IT IS AN AI MOMEMNTUM TRACKER PROTOTYPE.FOR EUDUCATIONAL PURPOSES ONLY</p>
+ <div style = "display: flex; justify-content: center; align-items: center; height: 50px;"> <p>THIS IS NOT INVESTMENT ADVICE ONLY. IT IS AN AI MOMEMNTUM TRACKER PROTOTYPE. FOR EUDUCATIONAL PURPOSES ONLY</p>  </div>
   <script>
     const WEBHOOK = 'https://michaelfinance.app.n8n.cloud/webhook/dailymoversandlosers';
     const INTERVAL = 5 * 60 * 1000;
